<resources>
    <string name="app_name">Logica App</string>
    <string name="title">Conjunction (AND)</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">A ^ B</string>
    <string name="correctAnswers">The correct number of answers is %d</string>
    <string-array name="tf">
        <item>T/F</item>
        <item>T</item>
        <item>F</item>
    </string-array>
    <string name="submit">Submit</string>
</resources>
